--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ pandas==0.22.0
 parso==0.1.1
 pexpect==4.4.0
 pickleshare==0.7.4
+Pillow==5.1.0
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
@@ -20,6 +21,8 @@ pyparsing==2.2.0
 python-dateutil==2.7.1
 pytz==2018.3
 pyzmq==17.0.0
+scipy==1.0.1
+seaborn==0.8.1
 simplegeneric==0.8.1
 six==1.11.0
 tornado==5.0.1
